public/styles/sass/style.sass
*
  box-sizing: border-box

body
  margin: 0

.container 
  min-width: 100vw
  min-height: 100vh
  background-color: #333
  display: flex
  flex-direction: column
  align-items: center
  justify-content: flex-start

.header
  background-color: #070
  display: flex
  width: 100vw

.navigation
  width: 100%
  padding: 10px
  background-color: #666
  display: flex
  justify-content: space-evenly
  align-items: center
  
  &__link
    text-decoration: none
    color: #f0f0f0
    padding: 13px
    font-size: 20px
    &:hover
      color: #789
      background-color: #006

.main
  background-color: #440
  width: 90%
  height: 100%
  margin: 20px
  & .pokemone-list
    list-style: none
    display: flex
    justify-content: space-evenly
    
.card 
  min-width: 480px
  min-height: 300px
  border-radius: 20px
  background-color: #490

